# srcSlice

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md  toolchain-msvc.cmake  vcpkg.json
.circleci/: config.yml
CMake/: config.cmake  install.cmake  srcslice.cmake
presets/: CMakeBasePresets.json  CMakeMSVCPresets.json
src/: CMakeLists.txt  testfile.cpp
src/catch2/: catch.hpp
src/cpp/: TestsrcSlicePolicy.cpp  main.cpp  output.cpp  srcSlice.cpp  srcSliceHandler.cpp  srcSliceTest.xxx  srcslice.cpp  srcslicecollection.cpp  srcsliceevent.cpp  srcslicehandler.cpp  srcsliceparse.cpp  srcslicepolicy.cpp  srcsliceprofile.cpp  srcsliceprogress.cpp  srcsliceworker.cpp  testfile.cpp  testfile.cpp.xml
src/headers/: FunctionSliceProfilePolicy.hpp  InitPolicy.hpp  SliceProfile.hpp  SrcSlicePolicy.hpp  Utility.hpp  srcSlice.hpp  srcSliceHandler.hpp  srcSlicePolicy.hpp  srcSliceProfile.hpp  srcslicecollection.hpp  srcsliceevent.hpp  srcslicehandler.hpp  srcsliceparse.hpp  srcslicepolicy-backup.hpp  srcslicepolicy.hpp  srcsliceprofile.hpp  srcsliceprogress.hpp  srcsliceworker.hpp
src/release/: slice.cpp
src/tests/: TestFlatSlice.cpp  TestFlatSlice.hpp
test/: CMakeLists.txt  srcSliceTest.cpp  srcSliceTest.hpp  srcslicetest.cpp  srcslicetest.hpp  testAliases.cpp  testConditionDecl.cpp  testConditional.cpp  testConst.cpp  testConstReference.cpp  testCtrlEdges.cpp  testFuncExpand.cpp  testGeneral.cpp  testMultifile.cpp  testParseExpr.cpp  testPassByReference.cpp  testPassByValue.cpp  testPointer.cpp  testconditional.cpp  testdefinitions.cpp  testpointer.cpp  testuses.cpp
testPS/: CMakeLists.txt  funcProfSrcSliceTest.cpp  srcSliceTest.cpp
testoracles/: ifStmtDef.cpp  simpleDef.cpp  simpleDoWhileStmt.cpp  simpleForStmt.cpp  simpleIfStmt.cpp  simpleIndexOp.cpp  simplePointer.cpp  simplePointerDef.cpp  simplePointerUse.cpp  simpleStaticArray.cpp  simpleStaticArrayUse.cpp  simpleSwitchStmt.cpp  simpleUse.cpp  simpleUseDef.cpp  simpleWhileStmt.cpp
